# anatoly-rozhkov-demo-2

./: .env-example  .gitignore  Makefile  README.md  black.toml  docker-compose.yml  pyproject.toml
bet_maker/: main.py
bet_maker/adapters/db/: connection_management.py  postgres.py
bet_maker/adapters/rabbitmq/: consumer_pika_client.py
bet_maker/adapters/redis/: redis_client.py
bet_maker/core/: lifespan.py  settings.py
bet_maker/core/error_handlers/: base_error_handlers.py
bet_maker/core/errors/: base_error.py
bet_maker/core/schemas/: base_error_schemas.py
bet_maker/core/utils/: lifespan.py
bet_maker/core/utils/loggers/: base_logger.py  default_logger.py  logger.py
bet_maker/interactors/: bet_interactor.py  event_interactors.py  redis_interactors.py
bet_maker/models/: __init__.py  base_models.py  bet_models.py  event_models.py
bet_maker/routers/: main_router.py
bet_maker/routers/bet_maker/: bet_router.py  event_router.py
bet_maker/schemas/: base_schemas.py  bet_schemas.py  event_schemas.py
bet_maker/tests/: conftest.py  factories.py  pytest.ini
bet_maker/tests/factories/: bet_factories.py  event_factories.py
bet_maker/tests/response_validation_helpers/: bet_validators.py  event_validators.py
bet_maker/tests/test_bets/test_negative/: test_create_bets.py
bet_maker/tests/test_bets/test_positive/: test_create_bets.py  test_get_bets.py
bet_maker/tests/test_events/: test_get_events.py
bet_maker/tests/utils/: factory_helpers.py  iterable_object_validators.py
docker/: BetMaker.dockerfile
etc/: init-user.sql
(+1 files in other folders)
