[project]
name = "anatoly-rozhkov-demo-2"
version = "0.1.0"
description = ""
authors = [
    {name = "Anatoly Rozhkov",email = "anatoly.rozhkov1998@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "pydantic (>=2.11.0,<3.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "isort (>=6.0.1,<7.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pytest-asyncio (>=0.26.0,<0.27.0)",
    "aio-pika (>=9.5.5,<10.0.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "pytest (>=8.3.5,<9.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"